<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TP4 JournalDeBord</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bt_TimeTrack">Punch</string>
    <string name="title_activity_time_track">TimeTrack</string>
    <string name="bt_Add_Log">Écrire Dans le Journal</string>
    <string name="title_activity_read_log">ReadLog</string>
    <string name="bt_Read_Log">Lire le Journal</string>
    <string name="title_activity_write_log">WriteLog</string>
    <string name="bt_pi">Commencer</string>
    <string name="bt_po">Arrêter</string>
    <string name="bt_ps">Pause !</string>
    <string name="tb_wl_text">Entrez la note ici</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="bt_calendar_txt">Calendrier</string>
    <string name="bt_calendar_add_event">Ajouter</string>
    <string name="bt_calendar_cancel">Annuler</string>
    <string name="tv_calendar_bTime">Heure de Début</string>
    <string name="tv_calendar_eTime">Heure de Fin</string>
    <string name="event_text">Entrez le Titre de L\'événement</string>
    <string name="edit_description">Description de l\'évenement</string>
    <string name="edit_lieu">Entrez le Lieu</string>
    <color name="black">#585858</color>
    <string name="bt_onclick">Effacer le Journal</string>

</resources>
