<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tpjdb.Main" >

    <Button
        android:id="@+id/PIbuttonl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/bt_TimeTrack"
        android:onClick="mTimeTrack" />

    <Button
        android:id="@+id/wl_bt_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/PIbuttonl"
        android:layout_below="@+id/PIbuttonl"
        android:text="@string/bt_Add_Log"
        android:onClick="mWriteLog" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/bt_Read_Log"
        android:onClick="mReadLog" />

</RelativeLayout>